# GravitySim

./: CMakeLists.txt  README.md  structure.txt
include/: object.h  physics.h  simulation.h  ui.h
include/glad/: glad.h
src/: glad.c  main.cpp  object.cpp  physics.cpp  simulation.cpp  ui.cpp
